--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,22 @@
-<html>
-  <form accept-charset="UTF-8" action=<%= users_path %> method="post">
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <label for="username">Username</label>
-    <input type="text" name="user[username]"><br/>
-    <label for="email">Email</label>
-    <input type="email" name="user[email]"><br/>
-    <label for="password">Password</label>
-    <input type="password" name="user[password]"><br />
-    <input type="submit">
-  </form>
-</html>
+<%= form_tag(users_path, method: :post) do %>
+  <%= label_tag(:username, "Username:") %>
+  <%= text_field_tag(:username) %><br/>
+  <%= label_tag(:email, "Email:") %>
+  <%= email_field_tag(:email) %><br/>
+  <%= label_tag(:password, "Password:") %>
+  <%= password_field_tag(:password) %><br/>
+  <%= submit_tag("Submit") %>
+<% end %>
+
+<!--  
+<form accept-charset="UTF-8" action=<%= users_path %> method="post">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <label for="username">Username</label>
+  <input type="text" name="user[username]"><br/>
+  <label for="email">Email</label>
+  <input type="email" name="user[email]"><br/>
+  <label for="password">Password</label>
+  <input type="password" name="user[password]"><br />
+  <input type="submit">
+</form>
+-->
