--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,9 @@
+<% unless @user.errors.empty? %>
+  <% @user.errors.full_messages.each do |msg| %>
+    <p><%= msg %></p>
+  <% end %>
+<% end %>
+
 <%= form_for @user do |f| %>
   <%= f.label "Username:" %>
   <%= f.text_field :username, placeholder: "enter name..." %><br/>
